# glitch-forge

./: .gitignore  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241126_0730_001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: api_keys.py  auth.py  requests.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/models/: __init__.py  api_key.py  consultation_request.py  user.py  webhook_delivery.py
backend/app/schemas/: __init__.py  api_key.py  consultation_request.py  user.py  webhook_delivery.py
backend/app/services/email/: __init__.py  base.py  factory.py  resend.py  sendgrid.py  templates.py
backend/app/tests/: test_main.py
backend/scripts/: create_test_data.py
docs/: PHASE1_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_PLAN.md  PHASE4_PROGRESS.md  PROGRESS.md
docs/architecture/: ARCHITECTURE_COMPARISON.md  EVENT_DRIVEN_ARCHITECTURE.md  HITL_SERVICE_SCOPE.md
docs/setup/: GETTING_STARTED.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Navigation.tsx
(+10 files in other folders)
